# hotmart-challenge

./: .dockerignore  Dockerfile  Makefile  README.md  pyproject.toml  requirements.in  requirements.txt  start.sh
api/: README.md
app/: README.md
conf/: logging.conf
notebooks/: Prototype.ipynb  articles.csv
src/: README.md
src/services/: agent.py
src/support_bot/: base_models.py  entrypoint.py
src/support_bot/controllers/: graph.py
src/support_bot/controllers/nodes/: doc_grade.py  generate_answer.py  human_approval.py  out_of_context.py  query_response.py  question_grade.py  question_rewrite.py  supervisor.py
src/support_bot/controllers/subgraphs/: agentic_rag.py
src/support_bot/services/: database.py  llms.py
src/support_bot/services/embeddings/: custom_retriever.py  doc_splitter.py  vector_store.py
src/support_bot/services/tools/: retriever_tool.py
src/support_bot/settings/: base_settings.py
