[project]
name = "hotmart-challenge"
version = "0.1.0"
requires-python = ">=3.11,<3.12"
description = "Multi-Agent System for Customer Support"
authors = ["Alessandro Queiroz <queirozalessandro1@gmail.com>"]
readme = "README.md"

dependencies = [

]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
