[project]
name = "support-bot"
version = "1.0.0"
requires-python = ">=3.11"

dependencies = [
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "python-json-logger>=3.3.0",
    "uvicorn>=0.35.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/support_bot"]

[project.scripts]
support-bot = "support_bot.entrypoint:main"
